--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: innerspace
+  database: test
   pool: 5
   timeout: 5000
 
